# macos-UnifiedLogs-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
macos_unifiedlogs/: __init__.py  catalog.py  chunkset.py  dsc.py  error.py  filesystem.py  header.py  iterator.py  message.py  parser.py  preamble.py  timesync.py  traits.py  unified_log.py  util.py  uuidtext.py
macos_unifiedlogs/chunks/: __init__.py  oversize.py  simpledump.py  statedump.py
macos_unifiedlogs/chunks/firehose/: __init__.py  activity.py  firehose_log.py  flags.py  loss.py  nonactivity.py  signpost.py  trace.py
macos_unifiedlogs/decoders/: __init__.py  bool_decoder.py  darwin.py  decoder.py  dns.py  location.py  network.py  opendirectory.py  time_decoder.py  uuid_decoder.py
tests/: __init__.py  conftest.py  test_big_sur.py  test_catalog.py  test_decoders.py  test_dsc.py  test_filesystem.py  test_firehose.py  test_header.py  test_high_sierra.py  test_message.py  test_monterey.py  test_timesync.py  test_unified_log.py  test_util.py  test_uuidtext.py
